--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+#spring.datasource.username=root
+#spring.datasource.password=
 
 #le indico q voy utilizar hibernate y la version de MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=clashroyale3
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
